[workspace]
resolver = "3"
members = ["porter-cli","porter-core"]

[workspace.dependencies]
iroh = { version = "0.92", default-features = false }
iroh-base = { version = "0.92", default-features = false, features = ["ticket"] }
iroh-gossip = { version = "0.92", default-features = false, features = ["net"] }
iroh-ping = { version = "0.4"}
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "*"