[package]
name = "porter-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
iroh.workspace=true
iroh-base.workspace=true
iroh-ping.workspace=true
iroh-blobs.workspace=true
tracing-subscriber.workspace = true
log.workspace=true
rand.workspace=true
hex.workspace=true
n0-future.workspace=true